--- a/src/main/resources/templates/companies/form.html
+++ b/src/main/resources/templates/companies/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta th:insert="~{/fragments/custom-headfiles :: register-headfiles(title='Registre-se')}">
-    <title>Registre-se</title>
     <link rel="stylesheet" href="/styles/company/form-company.css">
+    <title>Registre-se</title>
 </head>
 
 <body class="main-screen">
@@ -14,91 +14,102 @@
 <main>
     <div class="card-main">
         <div class="main-content">
-            <h1>Cadastrar-se</h1>
-            <form th:action="@{/company/save}" method="post" th:object="${company}" onsubmit="return validateForm()">
+            <h1 class="title-page">Cadastrar-se</h1>
+            <form th:action="@{/company/save}" method="post" th:object="${company}">
+                <input id="input-id" class="input-form" type="hidden" th:field="*{id}"/>
+
                 <fieldset class="form-container">
-                    <input type="text" name="username" id="username" class="input-form w-50" placeholder="Nome de usuário *"
+                    <label class="label-form" for="input-username">Nome de usuário *</label>
+                    <input type="text" name="username" id="input-username" class="input-form"
+                           placeholder="Nome de usuário *"
                            th:field="*{user.username}" required minlength="5" maxlength="20"
-                           title="O nome de usuário deve ter entre 5 e 20 caracteres.">
-                    <span id="username-error" class="error-message" style="color: red; display: none;"></span>
+                           title="O nome de usuário deve ter entre 5 e 20 caracteres e conter apenas letras e números."/>
+                    <span th:if="${usernameError}" class="alert alert-danger" th:text="${usernameError}"></span>
 
-                    <div class="d-flex flex-row gap-3">
-                        <input type="password" name="password" id="password" class="w-50 input-form" placeholder="Senha *"
-                               th:field="*{user.password}" required minlength="8" maxlength="20"
-                               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                               title="A senha deve ter pelo menos 8 caracteres, incluir uma letra maiúscula, uma letra minúscula e um número.">
+                    <label class="label-form" for="input-password">Senha *</label>
+                    <input class="input-form" id="input-password" minlength="8" maxlength="20" name="password"
+                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                           placeholder="Senha" required th:field="*{user.password}"
+                           title="Senha deve ter pelo menos 8 caracteres, incluir uma letra maiúscula, uma letra minúscula e um número."
+                           type="password"/>
 
-                            <input type="password" id="password-confirm" class="input-form w-50 mx-2"
-                                placeholder="Confirme sua senha" required minlength="8" maxlength="20"
-                                title="A confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida.">
-                        </div>
-                        <div id="password-error" class="error-message"></div>
-                    </fieldset>
+                    <label class="label-form" for="input-password-confirm">Confirme a Senha *</label>
+                    <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha"
+                           type="password"
+                           required minlength="8"
+                           title="Confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida."/>
 
-                    <fieldset class="form-container">
-                        <legend class="form-container-description">Informações Básicas</legend>
-                        <div class="d-flex flex-row gap-3">
-                            <input type="text" id="fantasyNameInput" class="input-form w-50"
-                                placeholder="Nome fantasia *" th:field="*{fantasyName}" required maxlength="100"
-                                title="O nome fantasia pode ter no máximo 100 caracteres.">
-
-                            <input type="text" id="cnpjInput" class="input-form w-50" placeholder="CNPJ *"
-                                th:field="*{cnpj}" required pattern="\d{14}" inputmode="numeric"
-                                title="Por favor, insira um CNPJ válido com 14 dígitos.">
-                        </div>
-
-                        <input type="text" id="principalActivityInput" class="input-form w-100"
-                            placeholder="Principal atividade *" th:field="*{principalActivity}" required maxlength="150"
-                            title="A principal atividade pode ter no máximo 150 caracteres.">
-
-                        <input type="url" id="urlPageInput" class="input-form w-100" placeholder="Site da empresa *"
-                            th:field="*{urlPage}" required pattern="https?://.+"
-                            title="Por favor, insira uma URL válida (ex: http://www.exemplo.com).">
-                    </fieldset>
+                    <div id="password-error" class="error-message" style="display: none; color: red;">
+                        As senhas não coincidem. Por favor, verifique.
+                    </div>
+                </fieldset>
 
                 <fieldset class="form-container">
-                    <div class="d-flex flex-column">
-                        <legend class="form-container-description">Contato</legend>
-                        <div class="d-flex flex-row gap-3">
-                            <input type="email" id="input-email" class="input-form w-50" placeholder="Email"
-                                   th:field="*{user.email}" required
-                                   title="Por favor, insira um endereço de email válido.">
-                            <span id="email-error" class="error-message" style="color: red; display: none;"></span>
+                    <legend class="form-container-description">Informações Básicas</legend>
+                    <label class="label-form" for="fantasyNameInput">Nome fantasia *</label>
+                    <input type="text" id="fantasyNameInput" class="input-form" placeholder="Nome fantasia *"
+                           th:field="*{fantasyName}" required maxlength="100"
+                           title="O nome fantasia pode ter no máximo 100 caracteres."/>
+                    <span th:if="${fantasyNameError}" class="alert alert-danger" th:text="${fantasyNameError}"></span>
 
-                            <input type="tel" id="phoneNumberInput" class="input-form w-50" placeholder="Telefone *"
-                                    th:field="*{phoneNumber}" required pattern="\d{10,11}"
-                                    title="Por favor, insira um número de telefone válido com 10 ou 11 dígitos.">
-                            </div>
-                            <input type="text" id="personContactInput" class="input-form w-100"
-                                placeholder="Nome do responsável" th:field="*{personContact}" required maxlength="100"
-                                title="O nome do responsável pode ter no máximo 100 caracteres.">
+                    <label class="label-form" for="cnpjInput">CNPJ *</label>
+                    <input type="text" id="cnpjInput" class="input-form" placeholder="CNPJ *" th:field="*{cnpj}"
+                           required pattern="\d{14}"
+                           inputmode="numeric" title="Por favor, insira um CNPJ válido com 14 dígitos."/>
+                    <span th:if="${cnpjError}" class="alert alert-danger" th:text="${cnpjError}"></span>
+
+                    <label class="label-form" for="principalActivityInput">Principal atividade *</label>
+                    <input type="text" id="principalActivityInput" class="input-form"
+                           placeholder="Principal atividade *" th:field="*{principalActivity}" required maxlength="150"
+                           title="A principal atividade pode ter no máximo 150 caracteres."/>
+
+                    <label class="label-form" for="urlPageInput">Site da empresa *</label>
+                    <input type="url" id="urlPageInput" class="input-form" placeholder="Site da empresa *"
+                           th:field="*{urlPage}" required pattern="https?://.+"
+                           title="Por favor, insira uma URL válida (ex: http://www.exemplo.com)."/>
+                </fieldset>
+
+                <fieldset class="form-container">
+                    <legend class="form-container-description">Contato</legend>
+                    <label class="label-form" for="input-email">Email *</label>
+                    <input type="email" id="input-email" class="input-form" placeholder="Email" th:field="*{user.email}"
+                           required
+                           title="Por favor, insira um endereço de email válido."/>
+                    <span th:if="${emailError}" class="alert alert-danger" th:text="${emailError}"></span>
+
+                    <label class="label-form" for="phoneNumberInput">Telefone *</label>
+                    <input type="tel" id="phoneNumberInput" class="input-form" placeholder="Telefone *"
+                           th:field="*{phoneNumber}" required pattern="\d{10,11}"
+                           title="Por favor, insira um número de telefone válido com 10 ou 11 dígitos."/>
+
+                    <label class="label-form" for="personContactInput">Nome do responsável *</label>
+                    <input type="text" id="personContactInput" class="input-form" placeholder="Nome do responsável"
+                           th:field="*{personContact}" required maxlength="100"
+                           title="O nome do responsável pode ter no máximo 100 caracteres."/>
+                </fieldset>
+
+                <fieldset class="form-container">
+                    <legend class="form-container-description">Endereço</legend>
+                    <label class="label-form" for="addressInput">Endereço *</label>
+                    <input type="text" id="addressInput" class="input-form" placeholder="Endereço *"
+                           th:field="*{address}" required maxlength="200"
+                           title="O endereço pode ter no máximo 200 caracteres."/>
+
+                    <div class="file-upload">
+                        <label for="addressVerify">Adicionar Comprovante</label>
+                        <input type="file" id="addressVerify" class="file-input" required aria-required="true"/>
+                        <div id="file-error" class="error-message" style="display: none">Por favor, adicione um
+                            comprovante de residência.
                         </div>
-                    </fieldset>
-
-                    <fieldset class="form-container">
-                        <legend class="form-container-description">Endereço</legend>
-                        <div class="d-flex flex-column justify-content-center items-center gap-3">
-                            <input style="font-size: 16px" type="text" id="addressInput" class="input-form w-100"
-                                placeholder="Endereço *" th:field="*{address}" required maxlength="200"
-                                title="O endereço pode ter no máximo 200 caracteres.">
-
-                            <div class="file-upload">
-                                <label for="addressVerify">Adicionar Comprovante</label>
-                                <input type="file" id="addressVerify" class="file-input" required aria-required="true">
-                                <div id="file-error" class="error-message" style="display: none">Por favor, adicione um
-                                    comprovante de
-                                    residência.
-                                </div>
-                            </div>
-                        </div>
-                    </fieldset>
-                    <div class="buttons-actions">
-                        <button class="submit-input btn btn-primary" type="submit">Salvar</button>
-
                     </div>
-                </form>
-            </div>
+                </fieldset>
+
+                <div class="buttons-actions">
+                    <input class="submit-input" type="submit" value="Salvar"/>
+                </div>
+            </form>
         </div>
+    </div>
 
     <div th:replace="~{/fragments/scripts}"></div>
 </main>
