Autorização, novo usuário admin e ícones de oferta
Autorização por Role;
Novo usuário administrador;
Novos ícones de operação sobre oferta de estágio.

--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -15,11 +15,12 @@
             <div class="card-list-component">
                 <h1>Ofertas de Estágio</h1>
                 <div class="buttons-actions">
-                    <button class="button-add btn btn-primary " th:href="@{/internshipOffer/register}">
+                    <button class="button-add btn btn-primary " th:href="@{/internshipOffer/register}"
+                            th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')')}">
                         Nova Oferta
                     </button>
-
                 </div>
+
                 
                 <th:block th:replace="~{/offers/fragments/filter}"></th:block>
 
