--- a/src/main/resources/templates/offers/fragments/card.html
+++ b/src/main/resources/templates/offers/fragments/card.html
@@ -53,12 +53,18 @@
         <a th:href="@{info/{id}(id=${offer.id})}" class="button-action btn-view">
             <i class="bi bi-binoculars-fill"></i> Visualizar
         </a>
-        <form th:action="@{apply/{id}(id=${offer.id})}" method="get">
-            <button class="button-action btn-apply" type="submit" value="Candidatar-se"></button>
+        <form th:action="@{apply/{id}(id=${offer.id})}" method="get"
+              th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')')}">
+            <button class="button-action btn-apply" type="submit" value="Candidatar-se">
+                <i class="bi bi-check-circle-fill"></i> Candidatar-se
+            </button>
         </form>
-        <form th:action="@{cancel/{id}(id=${offer.id})}" method="post">
+        <form th:action="@{cancel/{id}(id=${offer.id})}" method="post"
+              th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'') or hasRole(''ROLE_ADMIN'')')}">
             <input type="hidden" name="_method" value="DELETE" />
-            <button class="button-action btn-delete" type="submit" value="Cancelar"></button>
+            <button class="button-action btn-delete" type="submit">
+                <i class="bi bi-x-circle-fill"></i> Cancelar
+            </button>
         </form>
     </div>
 </div>
