--- a/src/main/resources/templates/offers/fragments/card.html
+++ b/src/main/resources/templates/offers/fragments/card.html
@@ -2,22 +2,22 @@
     <h3 th:text="${offer.principalActivity}"></h3>
     <div class="d-flex flex-row gap-2">
         <div class="d-flex flex-column">
-            <smal>ID</smal>
+            <small>ID</small>
             <p th:text="${offer.id}"></p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Contratante</smal>
+            <small>Contratante</small>
             <a th:href="@{/company/info/{id}(id=${offer.companyResponsible.id})}"
                 th:text="${offer.companyResponsible.fantasyName}"></a>
         </div>
     </div>
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column">
-            <smal>Carga Horária Semanal</smal>
+            <small>Carga Horária Semanal</small>
             <p th:text="${offer.weeklyWorkload} + ' horas'"></p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Valor da Bolsa</smal>
+            <small>Valor da Bolsa</small>
 
             <p>
                 <span th:if="${offer.remunerationValue > 0}"
@@ -31,13 +31,13 @@
     </div>
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column">
-            <smal>Vale Transporte</smal>
+            <small>Vale Transporte</small>
             <p
                 th:text="${offer.transportVoucher != null && offer.transportVoucher > 0} ? 'R$' + ${#numbers.formatDecimal(offer.transportVoucher, 1, 2)} : 'Nenhum'">
                 Nenhum</p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Pré-requisitos</smal>
+            <small>Pré-requisitos</small>
             <p th:if="${offer.prerequisites != null && !offer.prerequisites.isEmpty()}"
                 th:text="${offer.prerequisites}"></p>
             <p th:unless="${offer.prerequisites != null && !offer.prerequisites.isEmpty()}">
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="status-box mt-3">
-        <smal>Status da Oferta</smal>
+        <small>Status da Oferta</small>
         <p th:classappend="${offer.status.ABERTA} ? 'text-success' : 'text-danger'"
             th:text="${offer.status.ABERTA} ? 'Aberta' : 'Fechada'"></p>
     </div>
