Início da página de registro, criação de erro, melhorias no Header
Foram feitas muitas alterações em várias partes do código (Tentarei não fazer mais isso)

- Início das funcionalidades de Candidatura
  - Página de informação
  - Botões de cancelar, aceitar
- Melhorias no Header
  - Novo Design
  - Fixação do usuário Logado
-Tratamento de Exceção
  -Controlador Para Tal
  - Página de erro padrão
  - Página Not-Found (Ainda não Funcionando)

--- a/src/main/resources/templates/candidatures/fragments/card.html
+++ b/src/main/resources/templates/candidatures/fragments/card.html
@@ -41,11 +41,7 @@
         <smal>Pré-requisitos</smal>
         <p th:text="${candidature.internshipOffer.prerequisites}">Nenhum</p>
     </div>
-
-    <div class="d-flex flex-column" class="buttons-actions">
-        <button class="btn button-action">Aprovar</button> <!--  Empresa aprova a candidatura do Aluno  -->
-        <button class="btn button-action">Visualizar</button> <!--  Empresa ou Aluno visualiza a candidatura do Aluno  -->
-        <button class="btn button-action">Recusar</button> <!--  Empresa recusa a candidatura do Aluno  -->
-        <button class="btn btn-danger button-action">Cancelar Candidatura</button> <!-- Aluno Cancela sua candidatura  -->
-    </div>
+    <th:block th:insert="~{/candidtures/fragments/buttons-actions}">
+        
+    </th:block>
 </div>
