--- a/src/main/resources/templates/system/not-found.html
+++ b/src/main/resources/templates/system/not-found.html
@@ -23,7 +23,7 @@
                         <h1>404</h1>
                         <h1>Page Not Found</h1>
                         <h2 id="description-error">Desculpe, a página que você está procurando não existe.</h2>
-
+                        <h3> Você tentou acessar[[${errorMessage}]]</h3>
                         <div class="error-actions">
                             <a th:href="@{/}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
                                 Leve-me ao Hall</a>
