--- a/src/main/resources/static/styles/system/error.css
+++ b/src/main/resources/static/styles/system/error.css
@@ -1,26 +1,64 @@
-.error-template {
-    padding: 40px 15px;
-    text-align: center;
-}
-
-.error-actions {
-    margin-top: 5%;
-    margin-bottom: 15px;
-}
-
-.error-actions .btn {
-    margin-right: 10px;
-    height:5rem;
-    font-size:2rem;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+    margin: 55px;
+    padding: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-main{
-    display: flex;
-    flex-direction: column;    
     align-items: center;
-    
+    height: 100vh;
+    color: #333;
+}
+
+.error-container {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
+    width: 100%;
+}
+
+h1 {
+    color: #e74c3c;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 1.2em;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.stack-trace {
+    background-color: #f1f1f1;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 0.9em;
+    color: #555;
+    max-height: 200px;
+    overflow-y: auto;
+    white-space: pre-wrap;
+    margin-bottom: 20px;
+}
+
+a {
+    text-decoration: none;
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+a:hover {
+    background-color: #2980b9;
+}
+
+.error-icon {
+    font-size: 50px;
+    color: #e74c3c;
 }
 .compass-container {
     display: flex;
